# finalSO_server

./: CMakeLists.txt  main.c  makefile
extras/: ficheros.c  ficheros.h  funciones.c  funciones.h  menu.c  menu.h  usuario.c  usuario.h  utils.c  utils.h
modelos/: conexion.h  configuracion.h  foto.h
